<resources>
    <string name="app_name">BG Manager</string>

    <!-- Generic Strings -->
    <string name="search_option">Search</string>
    <string name="filter_option">Filter</string>
    <string name="add_option">Add</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Navigation Menu Headings -->
    <string name="nav_header_title">BG Manager</string>
    <string name="nav_header_subtitle">Managing your Boardgame Collection</string>
    <string name="nav_header_desc">Placeholder</string>

    <!-- Side Navigation Menu Strings -->
    <string name="menu_search">Search</string>
    <string name="menu_game_list">Game List</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_game_details">Game Details</string>

    <!-- Search (Home) Activity  -->
    <string name="search_start_up">Let\'s start a search!</string>
    <string name="search_in_progress">Searching…</string>
    <string name="search_hint">Search boardgames on BGG</string>
    <string name="search_no_results">Oops, there seems to be no results!</string>
    <string name="search_name_not_found">N/A</string>
    <string name="search_image_desc">Search Result Image</string>

    <!-- BoardGame List Fragment -->
    <string name="bg_list_empty">Your list is empty</string>
    <string name="bg_list_filter_text">List of categories and filters:</string>
    <string name="bg_list_info_text">Add categories to filter by selecting the plus menu icon.\n
        Create a custom filter by selecting the filter icon on the menu, next to the plus icon.\n
        Add categories to games in the game list by selecting the \`pen\` or edit icon.\n
        Remove categories by selecting the \'X\' on the filter chips.</string>
    <string name="filter_name_ascending">Name: Ascending</string>
    <string name="filter_name_descending">Name: Descending</string>
    <string name="filter_add_new">New Category Name</string>

    <!-- BoardGame Details Fragment -->
    <string name="bg_details_minmaxplayers">No. of Players: %1$s to %2$s</string>
    <string name="bg_details_minmaxplaytime">Playtime (minutes): %1$s to %2$s</string>
    <string name="bg_details_yearpublished">"Year Published: %1$s</string>

</resources>
