<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.jonathanl.bgmanager.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_game_details"
            app:destination="@id/nav_game_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_game_list"
        android:name="com.jonathanl.bgmanager.ui.gamelist.GameListFragment"
        android:label="@string/menu_game_list"
        tools:layout="@layout/fragment_game_list" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.jonathanl.bgmanager.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jonathanl.bgmanager.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.jonathanl.bgmanager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_game_details"
        android:name="com.jonathanl.bgmanager.ui.boardgamedetails.BoardGameDetailsFragment"
        android:label="@string/menu_game_details"
        tools:layout="@layout/fragment_game_details" >
        <argument
            android:name="gameName"
            app:argType="string"
            android:defaultValue="Catan" />
        <argument
            android:name="gameId"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>
</navigation>